[gd_scene load_steps=15 format=3 uid="uid://dtp77ib8hbduf"]

[ext_resource type="Script" uid="uid://b0t73104t6cm" path="res://example.gd" id="1_rujmf"]
[ext_resource type="Script" uid="uid://dhi4oijbc2s7h" path="res://quick-sfx/quick_sfx.gd" id="2_kkclv"]
[ext_resource type="Script" uid="uid://cc7i6vagdv76n" path="res://quick-sfx/quick_sfx_clip.gd" id="3_mt10o"]
[ext_resource type="AudioStream" uid="uid://b5x4g8b3xul5e" path="res://quick-sfx/example-sfx/click.wav" id="4_hl4on"]
[ext_resource type="AudioStream" uid="uid://bei5n12o6ei5p" path="res://quick-sfx/example-sfx/coin.wav" id="5_v40a1"]
[ext_resource type="AudioStream" uid="uid://oktxevuqlctk" path="res://quick-sfx/example-sfx/explosion.wav" id="6_3dlnp"]
[ext_resource type="AudioStream" uid="uid://d26e8db585wnb" path="res://quick-sfx/example-sfx/waves.wav" id="7_p21br"]
[ext_resource type="Texture2D" uid="uid://sohjp7mi401n" path="res://icon.svg" id="8_kkclv"]
[ext_resource type="AudioStream" uid="uid://dvhir4qg2tvye" path="res://quick-sfx/example-sfx/boop.wav" id="8_mt10o"]

[sub_resource type="Resource" id="Resource_hl4on"]
script = ExtResource("3_mt10o")
stream = ExtResource("8_mt10o")
metadata/_custom_type_script = "uid://cc7i6vagdv76n"

[sub_resource type="Resource" id="Resource_ofd4a"]
script = ExtResource("3_mt10o")
stream = ExtResource("4_hl4on")
metadata/_custom_type_script = "uid://cc7i6vagdv76n"

[sub_resource type="Resource" id="Resource_35oce"]
script = ExtResource("3_mt10o")
stream = ExtResource("5_v40a1")
metadata/_custom_type_script = "uid://cc7i6vagdv76n"

[sub_resource type="Resource" id="Resource_wv1ka"]
script = ExtResource("3_mt10o")
stream = ExtResource("6_3dlnp")
metadata/_custom_type_script = "uid://cc7i6vagdv76n"

[sub_resource type="Resource" id="Resource_kii8p"]
script = ExtResource("3_mt10o")
stream = ExtResource("7_p21br")
metadata/_custom_type_script = "uid://cc7i6vagdv76n"

[node name="Example" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rujmf")

[node name="QuickSFX" type="Node" parent="."]
script = ExtResource("2_kkclv")
clips = Dictionary[String, ExtResource("3_mt10o")]({
"boop": SubResource("Resource_hl4on"),
"click": SubResource("Resource_ofd4a"),
"coin": SubResource("Resource_35oce"),
"explosion": SubResource("Resource_wv1ka"),
"waves": SubResource("Resource_kii8p")
})
pitch_shift_range = 12
metadata/_custom_type_script = "uid://dhi4oijbc2s7h"

[node name="CoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 141.0
offset_right = 245.0
offset_bottom = 172.0
text = "Coin
"

[node name="CoinDropButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 609.0
offset_right = 96.0
offset_bottom = 640.0
text = "Coin Drop"

[node name="CoinsRiseUpButton" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 609.0
offset_right = 217.0
offset_bottom = 640.0
text = "Twinkle Twinkle"

[node name="ClickButton" type="Button" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 189.0
offset_right = 390.0
offset_bottom = 220.0
text = "Click"

[node name="BoopButton" type="Button" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 265.0
offset_right = 425.0
offset_bottom = 296.0
text = "Boop"

[node name="ExplosionButton" type="Button" parent="."]
layout_mode = 0
offset_left = 159.0
offset_top = 269.0
offset_right = 249.0
offset_bottom = 300.0
text = "Explosion"

[node name="WavesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 355.0
offset_top = 110.0
offset_right = 445.0
offset_bottom = 141.0
text = "Waves"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 543.0
offset_top = 68.0
offset_right = 1067.0
offset_bottom = 592.0
columns = 4
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect3" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect4" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect5" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect6" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect7" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect8" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect9" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect10" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect11" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect12" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect13" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect14" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect15" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="TextureRect16" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("8_kkclv")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 420.0
offset_right = 209.0
offset_bottom = 443.0
text = "Total Audio Players"

[node name="TotalAudioPlayersInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 445.0
offset_right = 258.0
offset_bottom = 480.0
text = "8"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 420.0
offset_right = 424.0
offset_bottom = 443.0
text = "Audio Bus"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 273.0
offset_top = 444.0
offset_right = 443.0
offset_bottom = 479.0
selected = 0
item_count = 2
popup/item_0/text = "Master"
popup/item_0/id = 0
popup/item_1/text = "Wet Fart"
popup/item_1/id = 1
